Disable already moved score list. Added condensed font for score list.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,3 +20,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
+  fonts:
+    - family: RobotoCondensed
+      fonts:
+        - asset: assets/RobotoCondensed-Regular.ttf
